--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <head>
-	<title>coding-foundation-aleksandra</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	 <title>coding-foundation-aleksandra</title>
+	  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 
 <body>
+    background-color: black;
 
 
 
 
+    <script src = "javascript/script.js"></script>
 
-  <script src = "javascript/script.js"></script>
-
-	</body>
+</body>
 
 	</html>
