--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -7,15 +7,13 @@
 
 <body>
   {
-      background-color: black;
+  background-color: #000000;
   }
-
+</body>
 
 
 
 
     <script src = "javascript/script.js"></script>
-
-</body>
 
 	</html>
