--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 	 <title>coding-foundation-aleksandra</title>
 	  <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -7,7 +8,7 @@
 
 <body>
   {
-  background-color: #000000;
+  background-color:black;
   }
 </body>
 
