--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-	 <title>coding-foundation-aleksandra</title>
-	  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+   <html lang="en" dir="ltr">
+      <head>
+       	 <title>coding-foundation-aleksandra</title>
+       <meta charset="utf-8">
+       <style media="screen">
+
 </head>
 
 
