--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -6,13 +6,12 @@
        <meta charset="utf-8">
        <style media="screen">
 
-</head>
-
-
 <body>
   {
-  background-color: blue;
+    background-color: black;
   }
+  </style>
+  </head>
 </body>
 
 
