--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -5,9 +5,11 @@
            <meta charset="utf-8">
        	   <title>coding-foundation-aleksandra</title>
            <style media="screen">
-      <body>
-        background-color:black;
-      </body>
+    body{
+      background-color:black;
+    }
+
+
 </style>
 </head>
 
