--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
    <html lang="en" dir="ltr">
+   <link rel="stylesheet" type="text/css" href="css/style.css">
       <head>
            <meta charset="utf-8">
        	   <title>coding-foundation-aleksandra</title>
@@ -15,4 +16,5 @@
 
 
 
+<script src = "javascript/script.js"></script>
 	</html>
