--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -8,10 +8,12 @@
            <style media="screen">
     body{
       background-color:black;
-      <div id = "box1"></div>
+
     }
 
-
+<body>
+  <div id = "box1"></div>
+</body>
 
 
 </style>
