--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -7,7 +7,7 @@
        	   <title>coding-foundation-aleksandra</title>
            <style media="screen">
   <body>
-  <div class = "box1"></div>
+  <div class = "box1">
 </body>
 
 
