--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -3,13 +3,13 @@
    <html lang="en" dir="ltr">
    <link rel="stylesheet" type="text/css" href="style.css">
       <head>
-           
+
        	   <title>coding-foundation-aleksandra</title>
 
 </head>
 
 <body>
-<div class = "box1">
+<div class = "box1"></div>
 </body>
 
 <script src = "script.js"></script>
