--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -10,6 +10,7 @@
 
 <body>
 <div class = "box1"></div>
+<button type="button" name="button" id = "button">Push me!</button>
 </body>
 
 <script src = "script.js"></script>
