number box ready

--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-<div class = "box1"></div>
+
 <button type="button" name="button" id = "button">Push me!</button>
+<input type = "number" id = "myText"/>
+
 </body>
 
 <script src = "script.js"></script>
