--- a/my-work/week 1/coding-foundation/index.html
+++ b/my-work/week 1/coding-foundation/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-<button type="button" name="button" id = "button">Push me!</button>
-<input type = "number" id = "myText"/>
+<button type="button" name="button" id = "button">Create Squares</button>
+<input type = "number" id = "inputNumber"/>
 
 </body>
 
