--- a/my-work/week 2/Homework 1/index.html
+++ b/my-work/week 2/Homework 1/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-<h5>Food likings in the CDV clas</h5>
+<h5>Movie Preferences Among My Friends</h5>
 
 <div id = "container">
 
