--- a/my-work/week 2/Lab/index.html
+++ b/my-work/week 2/Lab/index.html
@@ -14,6 +14,13 @@
   </head>
   <body>
 
+    <h2>Compliments I received this week</h2>
+    <h3>How to read this:</h3>
+    <p><b>Pink</b> - the compliment recieved was related to my birthday </p>
+    <p><b>Blue</b> - the compliment recieved was on my personality </p>
+    <p><b>Green</b> - the compliment recieved was on my appearance </p>
+    <p><b>Yellow</b> - the compliment recieved was on my work </p>
+
     <!-- we put this div into place. later we use d3/js to
     inseret a <svg> elment into it in which we then build
     out visualization -->
