--- a/my-work/week 5/datazine project/cover.html
+++ b/my-work/week 5/datazine project/cover.html
@@ -62,6 +62,6 @@ change and start giving people more compliments.
     </div>
       </div>
 
-    <script type="text/javascript" src="coverStuff.js"></script>
+    <script type="text/javascript" src="cover.js"></script>
   </body>
 </html>
