--- a/my-work/week 5/datazine project/middlespread.html
+++ b/my-work/week 5/datazine project/middlespread.html
@@ -36,30 +36,12 @@ us in our own code. -->
     inseret a <svg> elment into it in which we then build
     out visualization -->
     <div id="viz-container">
-<h2>COMPLIMENTS I RECEIVED</h2>
-      <div class="Tuesday">
-        TUESDAY
-      </div>
 
-      <div class="Wednesday">
-        WEDNESDAY
-      </div>
+<div id="header">
+  <h1 id="received">COMPLIMENTS I RECEIVED</h1>
+  <h1 id="gave">COMPLIMENTS I GAVE</h1>
+</div>
 
-      <div class="Thursday">
-        THURSDAY
-      </div>
-
-      <div class="Friday">
-        FRIDAY
-      </div>
-
-      <div class="Saturday">
-        SATURDAY
-      </div>
-
-      <div class="Sunday">
-        SUNDAY
-      </div>
 
 
 
