--- a/my-work/week 5/datazine project/back.html
+++ b/my-work/week 5/datazine project/back.html
@@ -25,7 +25,7 @@ us in our own code. -->
 
   <div id="container">
 
-    <h2>COMPLIMENTS I GAVE</h2>
+
 
     <svg width="1" height="1"
          xmlns="http://www.w3.org/2000/svg"
@@ -37,30 +37,10 @@ us in our own code. -->
     </svg>
 
     <div id="viz-container3">
-      <div class="Tuesday">
-        TUESDAY
+      <div id="header">
+        <h1 id="compLife">COMPLIMENTS GIVEN IN REAL LIFE</h1>
+        <h1 id="compOnline">COMPLIMENTS GIVEN ONLINE</h1>
       </div>
-
-      <div class="Wednesday">
-        WEDNESDAY
-      </div>
-
-      <div class="Thursday">
-        THURSDAY
-      </div>
-
-      <div class="Friday">
-        FRIDAY
-      </div>
-
-      <div class="Saturday">
-        SATURDAY
-      </div>
-
-      <div class="Sunday">
-        SUNDAY
-      </div>
-
     </div>
     <!-- we put this div into place. later we use d3/js to
     inseret a <svg> elment into it in which we then build
