stil need to rotate the names of the people by 90 degrees

--- a/my-work/week 5/datazine project/back.html
+++ b/my-work/week 5/datazine project/back.html
@@ -31,15 +31,15 @@ us in our own code. -->
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink">
          <filter id="blurMe">
-            <feGaussianBlur in="SourceGraphic" stdDeviation="2.5" />
+            <feGaussianBlur in="SourceGraphic" stdDeviation="6" />
           </filter>
 
     </svg>
 
     <div id="viz-container3">
       <div id="header">
-        <h1 id="compLife">COMPLIMENTS GIVEN IN REAL LIFE</h1>
-        <h1 id="compOnline">COMPLIMENTS GIVEN ONLINE</h1>
+        <h1 id="compLife">compliments given in real life</h1>
+        <h1 id="compOnline">compliments given online</h1>
       </div>
     </div>
     <!-- we put this div into place. later we use d3/js to
