--- a/my-work/week 5/datazine project/middlespread.html
+++ b/my-work/week 5/datazine project/middlespread.html
@@ -38,8 +38,8 @@ us in our own code. -->
     <div id="viz-container">
 
 <div id="header">
-  <h1 id="received">COMPLIMENTS I RECEIVED</h1>
-  <h1 id="gave">COMPLIMENTS I GAVE</h1>
+  <h1 id="received">compliments I received</h1>
+  <h1 id="gave">compliments I gave</h1>
 </div>
 
 
