--- a/my-work/week 5/datazine project/cover.html
+++ b/my-work/week 5/datazine project/cover.html
@@ -40,7 +40,7 @@ us in our own code. -->
     <div id="viz-container2">
 
 <br>
-      <h1>One week of my life depicted in compliments</h1>
+      <h1>one week of my life depicted in compliments</h1>
 <br>
 <p> Throughout the week I took notice and wrote down all of the compliments
 people gave me and the compliments I gave them.
@@ -57,7 +57,7 @@ change and start giving people more compliments.
 </p>
 <br>
 
-<h2>How to read my compliment postcard:</h2>
+<h2>how to read my compliment postcard:</h2>
 <br>
 <br>
     </div>
