--- a/my-work/week 5/datazine project/cover.html
+++ b/my-work/week 5/datazine project/cover.html
@@ -60,6 +60,8 @@ change and start giving people more compliments.
 <h2>how to read my compliment postcard:</h2>
 <br>
 <br>
+
+<p id = "signature">aleksandra medina</p>
     </div>
       </div>
 
