final updates - only thing left: the weird chrome sizing???

--- a/my-work/week 5/datazine project/back.html
+++ b/my-work/week 5/datazine project/back.html
@@ -38,8 +38,8 @@ us in our own code. -->
 
     <div id="viz-container3">
       <div id="header">
-        <h1 id="compLife">compliments given in real life</h1>
-        <h1 id="compOnline">compliments given online</h1>
+        <h1 id="compLife">compliments <br>given in real life</h1>
+        <h1 id="compOnline">compliments <br>given online</h1>
       </div>
     </div>
     <!-- we put this div into place. later we use d3/js to
