--- a/my-work/week 5/datazine project/cover.html
+++ b/my-work/week 5/datazine project/cover.html
@@ -61,7 +61,7 @@ change and start giving people more compliments.
 <br>
 <br>
 
-<p id = "signature">aleksandra medina</p>
+<h3 id = "signature">aleksandra medina</h3>
     </div>
       </div>
 
